<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluePrimarrry"
    tools:context=".RegisterAct">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cinema" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/daftar"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:padding="15dp"
        android:inputType="text"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:drawablePadding="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:autofillHints="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:layout_editor_absoluteX="24dp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:autofillHints="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/nama"
        android:autofillHints="@string/nama"
        android:inputType="text"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_rounded_white"
        android:drawableStart="@drawable/ic_baseline_android_24"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/bt_next_save"
        style="@style/Button.redend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lanjutkan"
        app:layout_constraintTop_toBottomOf="@+id/et_nama"
        tools:layout_editor_absoluteX="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_save">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/punya_akun"
            android:textColor="@color/GreyTransparant"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/masuk"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>